# t-rec-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Vagrantfile  _typos.toml  build.rs  dist-workspace.toml
.brew/: t-rec-not-working-on-github.rb  t-rec.rb
.cargo/: config.toml
.deb/: Dockerfile  Makefile
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_linux.md  bug_report_mac.md  feature_request.md
.github/workflows/: build.yml  deploy.yml  release-binary-assets.yml  release-plz.yml  release-to-homebrew-manual.yml  release-to-homebrew.yml  release.yml  winget-publish.yml
.rpm/: Dockerfile  Makefile  t-rec.spec
crates/animation-poc/: Cargo.toml
crates/core-animation/: Cargo.toml  README.md
crates/core-animation/examples/: README.md  basic_layers.rs  breathing_circle.rs  emitter.rs  loading_spinner.rs  neon_glow.rs  particle_images.rs  point_burst.rs  ripple_rings.rs  staggered_dots.rs  test_window_visibility.rs  window_builder.rs
crates/core-animation/examples/common/: mod.rs  recording.rs
crates/core-animation/src/: animation_builder.rs  color.rs  duration_ext.rs  layer_builder.rs  layer_ext.rs  lib.rs  particles.rs  shape_layer_builder.rs  text_layer_builder.rs  window.rs
crates/core-animation/tools/: update-example-screenshots.sh
crates/nswindow-poc/: Cargo.toml
crates/nswindow-poc/src/: main.rs
crates/osd-flash/: Cargo.toml  OVERHAUL.md  README.md
crates/osd-flash/examples/: animation_poc.rs  attach_to_window.rs  battery.rs  camera_flash.rs  cfrunloop_only.rs  composition.rs  composition_padding.rs  custom_icon.rs  equalizer.rs  hex_colors.rs  margin_test.rs  notification_badge.rs  pulsing_recording_icon.rs  radar.rs  recording_indicator.rs  recording_indicator_nice_api.rs  recording_indicator_pulse.rs  sierpinski.rs  test_calayer.rs  typewriter.rs
crates/osd-flash/src/: builder.rs  canvas.rs  color.rs  duration_ext.rs  error.rs  flash.rs  geometry.rs  level.rs  lib.rs  position.rs  shape.rs  window.rs
crates/osd-flash/src/animation/: animated_window.rs  builder.rs  easing.rs  interpolation.rs  keyframe.rs  mod.rs  runner.rs  transform.rs
crates/osd-flash/src/backends/: mod.rs
crates/osd-flash/src/backends/macos/: mod.rs
crates/osd-flash/src/backends/skylight/: canvas.rs  geometry_ext.rs  mod.rs  osd_window.rs  window.rs
crates/osd-flash/src/composition/: animation.rs  layer_builder.rs  mod.rs
crates/osd-flash/src/geometry/: mod.rs  point.rs  rect.rs  size.rs
crates/osd-flash/src/layout/: border.rs  box_model.rs  margin.rs  mod.rs  padding.rs
crates/osd-flash/src/style/: mod.rs  paint.rs  text_style.rs
crates/pulsing-poc/: Cargo.toml
crates/pulsing-poc/src/: main.rs
crates/skylight-osd/: Cargo.toml  README.md
crates/t-rec/: CHANGELOG.md  Cargo.toml  build.rs
crates/t-rec/benches/: README.md  decors_benchmark.rs
crates/t-rec/examples/: profile_shadow.rs
crates/t-rec/resources/poc/borderliner/: test_both  test_capture  test_dispatch  test_nsapp  test_nswindow  test_nswindow2  test_nswindow_thread  test_order  test_rust  test_skylight_runloop  test_thread  test_thread_runloop
crates/t-rec/src/: assets.rs  capture.rs  cli.rs  error.rs  event_router.rs  headless.rs  lib.rs  logging.rs  main.rs  main.rs.bak  post_processing.rs  pty.rs  pty_windows.rs  screenshot.rs  summary.rs  types.rs  utils.rs
crates/t-rec/src/api/: headless.rs  mod.rs
crates/t-rec/src/cli/: args.rs  mod.rs  prompt.rs  pty.rs  pty_windows.rs  summary.rs  tips.rs  utils.rs
crates/t-rec/src/cli/config/: defaults.rs  file.rs
crates/t-rec/src/cli/input/: mod.rs
crates/t-rec/src/cli/output/: mod.rs
crates/t-rec/src/cli/recorder/: runtime.rs  session.rs
crates/t-rec/src/cli/recorder/presenter/: mod.rs  noop.rs
crates/t-rec/src/common/: image.rs  mod.rs  platform_api.rs  utils.rs  window_id.rs
crates/t-rec/src/config/: profile.rs
crates/t-rec/src/core/: assets.rs  capture.rs  error.rs  event_router.rs  mod.rs  post_processing.rs  screenshot.rs  types.rs  utils.rs
crates/t-rec/src/core/common/: identify_transparency.rs  image.rs  margin.rs  mod.rs  platform_api.rs
crates/t-rec/src/core/decors/: big_sur_corner.rs  mod.rs  shadow.rs
crates/t-rec/src/core/generators/: gif.rs  mod.rs  mp4.rs  timeline.rs
crates/t-rec/src/core/linux/: mod.rs  x11_api.rs
crates/t-rec/src/core/macos/: mod.rs  screenshot.rs  window_id.rs
crates/t-rec/src/core/wallpapers/: mod.rs  types.rs  validation.rs  ventura.rs
crates/t-rec/src/core/windows/: mod.rs  screenshot.rs  window_id.rs
crates/t-rec/src/decors/: big_sur_corner.rs  mod.rs  shadow.rs
crates/t-rec/src/generators/: gif.rs  mp4.rs
crates/t-rec/src/input/: mod.rs
crates/t-rec/src/linux/: mod.rs  x11_api.rs
crates/t-rec/src/macos/: cg_window_constants.rs  core_foundation_sys_patches.rs  mod.rs  screenshot.rs  window_id.rs
crates/t-rec/src/output/: mod.rs
crates/t-rec/src/recorder/: mod.rs  session.rs
crates/t-rec/src/recorder/presenter/: macos.rs  mod.rs  noop.rs
crates/t-rec/src/wallpapers/: mod.rs  types.rs  validation.rs
crates/t-rec/src/windows/: mod.rs  screenshot.rs  window_id.rs
crates/t-rec/tests/frames/: frame-macos-right-side-issue.tga
features/: custom-wallpaper.md  interactive-video-prompt.md
resources/: list.c  lst
snap/: snapcraft.yaml
src/: capture.rs  cli.rs  decor_effect.rs  gif_gen.rs  main.rs  post_processing.rs  prompt.rs  pty.rs  summary.rs  tips.rs  utils.rs  window_id.rs  window_id_any.rs  window_id_macos.rs
src/any/: mod.rs
src/capture/: frame.rs  frame_comparator.rs  frame_essence.rs  framerate.rs  mod.rs  processor.rs  timecode.rs
src/common/: frame.rs  identify_transparency.rs  image.rs  margin.rs  mod.rs  platform_api.rs  recorder.rs  utils.rs
src/config/: commands.rs  init.rs  mod.rs  profile.rs
src/decors/: big_sur_corner.rs  mod.rs  shadow.rs
src/generators/: gif.rs  mp4.rs
src/input/: mod.rs
src/linux/: mod.rs  wayland_api.rs  x11_api.rs
src/macos/: core_foundation_sys_patches.rs  mod.rs  screenshot.rs  window_id.rs
src/wallpapers/: mod.rs  ventura.rs
src/win/: capture.rs  d3d.rs  (+3 more)
(+38 files in other folders)
