[workspace]
resolver = "3"
members = [
    "crates/t-rec",
    "crates/osd-flash",
]

[workspace.package]
version = "0.8.2"
authors = ["Sven Kanoldt <sven@d34dl0ck.me>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/sassman/t-rec-rs"

[workspace.dependencies]
osd-flash = { path = "crates/osd-flash" }
core-animation = { version = "0.3" }
duration-ext = { version = "1.0" }

anyhow = "1.0"
log = "0.4"

# Modern objc2-* crates (preferred)
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
objc2-app-kit = "0.3.2"
# objc2-quartz-core = "0.3.2"
objc2-core-graphics = { version = "0.3", features = [
    "CGColor", "CGColorSpace", "CGPath", "CGContext", "CGAffineTransform",
    "CGWindow", "CGDirectDisplay", "CGImage", "CGDataProvider", "CGBitmapContext"
] }
objc2-core-foundation = { version = "0.3", features = [
    "CFRunLoop", "CFDate", "CFArray", "CFDictionary", "CFString", "CFNumber", "CFAttributedString", "CFBase"
] }
# objc2-core-text = { version = "0.3", features = ["CTFont", "CTLine", "CTStringAttributes", "objc2-core-graphics"] }
