[package]
name = "osd-flash"
version = "0.1.0"
description = "On-screen display (OSD) flash indicators for visual feedback, such as screenshot flash effects or status icons"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# TODO: once api surface is stable, migrate over to `thiserror`
anyhow.workspace = true
log.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
libloading.workspace = true
core-animation.workspace = true
objc2-foundation.workspace = true

[dev-dependencies]
crossterm = "0.28"

[target.'cfg(target_os = "macos")'.dev-dependencies]
objc2.workspace = true
