[package]
name = "t-rec"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
links = "X11"
build = "build.rs"
include = ["src/**/*", "resources/**/*", "../../LICENSE", "../../*.md", "build.rs"]

[badges]
github-actions = { repository = "sassman/t-rec-rs", branch = "main", workflow = "Build" }
maintenance = { status = "actively-developed" }

[dependencies]
# Always-on (lib-core)
anyhow.workspace = true
log.workspace = true
tempfile = "3.23"
rayon = "1.11"
simplerand = "1.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["sync"] }

# Bin-only (pulled in by the `bin` feature)
env_logger = { version = "0.11", optional = true }
humantime = { version = "2.3", optional = true }
toml = { version = "1.0", optional = true }
dirs = { version = "6.0", optional = true }
dialoguer = { version = "0.12", optional = true, default-features = false }
crossterm = { version = "0.29", optional = true }

[dependencies.clap]
version = "4.5"
features = ["cargo", "derive", "help", "color", "std"]
default-features = false
optional = true

[dependencies.image]
version = "0.25"
default-features = false
features = ["bmp", "tga", "jpeg", "png"]

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-foundation.workspace = true
objc2-core-graphics.workspace = true
objc2-core-foundation.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["term", "fs", "signal"] }
libc = "0.2"

[target.'cfg(any(target_os = "linux", target_os = "netbsd"))'.dependencies]
x11rb = "0.13"

[target.'cfg(target_os = "windows")'.dependencies]
win-screenshot = "4.0"
windows = { version = "0.62", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
] }

[features]
default = ["bin"]
bin = [
    "dep:clap",
    "dep:crossterm",
    "dep:dialoguer",
    "dep:env_logger",
    "dep:humantime",
    "dep:toml",
    "dep:dirs",
]
headless = []
e2e_tests = []

[[bin]]
name = "t-rec"
path = "src/main.rs"
required-features = ["bin"]

[package.metadata.deb]
section = "x11"
depends = "imagemagick"
extended-description = """## Features
- Screenshotting your terminal with 4 frames per second (every 250ms)
- Generates high quality small sized animated gif images
- **built-in idle frames detection and optimization** (for super fluid
presentations)
- Applies (can be disabled) border decor effects like drop shadow
- Runs on MacOS and Linux
- Uses native efficient APIs
- Runs without any cloud service and entirely offline
- No issues with terminal sizes larger than 80x24
- No issues with fonts or colors
- No issues with curses based programs
- No issues with escape sequences
- No record and replay - just one simple command to rule them all
- Hidden feature: Record every window you want
- Written in Rust 🦀
"""

[package.metadata.rpm.targets]
buildflags = ["--release"]
t-rec = { path = "/usr/bin/t-rec" }

[package.metadata.docs.rs]
features = ["headless"]
